ChangeLog
---------

DONE
----

CURRENTLY DOING
---------------
Bug: Quest items might still be worth 0
Got audio set up
Fixed bug with gameOBjects not being destroyed
Added frostbite
Bug: If both party and monsters are wiped out, game doesn't game over
Bug: Stats aren't updating immediately on skill changes
Fixed se calculations for burn 
Buffed archer's survivalist
UI: Tiny arrow to swap party member
Bug: Den greywastes a little buggy
Balance: Buffed poison damage
Bug: Fixed logic with monster's buffing each other
Balanced: Buffed the greyhide alpha and wraith
Bug: Skills panel not updating once summoned party member leaves
Bug: Statspanel not updating when swapping between party Members
Balance: Magical leaves cost less
Fix: Make status effect displays hoverable
Balance: HP/MP should be percentage on level up
Bug: Gearpanel not set to non=active partyMember
Bug: Prog goes from 100 to 0 when tabbing away
Fix: Popup warning for trying to unassign a skill that can't be unassigned

Fix: Shift click to sell

Speed Runner Tester: Jeffrey Zhao

VERIFICATION NEEDED
-------------------
Bug: Candlemancy kinda bugged but need to figure out why 
Bug: Is it a UI glitch if all highlighted tabs during tutorials due to ! become normal coloure dupon clicking on tab?
    I.e. assume the player noticed?


NEAR FUTURE
----------------
Fix: Put all loading for everything at the start
Feature: Sound effects and music
Feature: Saving
Feature: Ending and beginning cutscenes
Feature: Gameover screen

FUTURE/MAYBE
------------
UI: Make quest completed notification seperate from normal completition
Fix: Make it so active skills are greyed out if 4 actives are already selected
Fix: Make a way to halt a fading coroutine should another one start
UI: Make status effects do the fade animation monster displays do
UI: status effects don't display in the statusPanel
UI: Add heal/focus animations on effect
Future: Add combat order on the side
Future: Animation skip on click